fix(popover): Hide popover that escapes the reference's clipping container.

--- a/src/assets/styles/_popper.scss
+++ b/src/assets/styles/_popper.scss
@@ -75,6 +75,10 @@ $popper-default-z-index: 900;
   :host([data-popper-placement]) .calcite-popper-anim--active {
     @include popperAnimActive();
   }
+
+  :host([data-popper-reference-hidden]) {
+    opacity: 0;
+  }
 }
 
 @mixin popperContainer($zIndex: $popper-default-z-index) {
